nginx-app/dev/ingress.yaml
#สร้างไฟล์ingressเพื่อเข้าnginx uiได้ 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: myapp
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginx.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
